--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,18 @@ pytest-asyncio>=0.21.1
 black>=23.3.0
 isort>=5.12.0
 flake8>=6.0.0
-mypy>=1.3.0 
+mypy>=1.3.0
+
+# Dependências principais
+pytest==8.0.0
+numpy==1.26.4
+pandas==2.2.1
+
+# Dependências de segurança
+cryptography==42.0.2
+pycryptodome==3.20.0
+
+# Dependências de desenvolvimento
+pylint==3.0.3
+mypy==1.8.0
+pytest-cov==4.1.0 
