Atualizar o sistema para integrar o serviço de Guardião Cognitivo com o gerenciador de memória, garantindo melhor monitoramento e salvaguardas. Adicionar inicialização de métricas Prometheus para monitoramento de eventos cognitivos e saúde do sistema. Atualizar o arquivo `memoria_compartilhada.json` com a nova data de última atualização e status do módulo de guardião. Ajustar o caminho do Dockerfile no `docker-compose.dashboard.yml` para refletir a nova estrutura de diretórios. Essas ações visam aprimorar a funcionalidade e a organização do sistema AutoCura.

--- a/deployment/docker/docker-compose.dashboard.yml
+++ b/deployment/docker/docker-compose.dashboard.yml
@@ -4,8 +4,8 @@ services:
   # API Principal com Dashboard
   autocura-api:
     build:
-      context: .
-      dockerfile: docker/Dockerfile.api
+      context: ../..
+      dockerfile: deployment/docker/Dockerfile.api
     container_name: autocura-api
     ports:
       - "8000:8000"
