Remover arquivos de configuração do Docker, incluindo `docker-compose.alpha.yml`, `docker-compose.testados.yml` e diversos Dockerfiles, para simplificar a estrutura do projeto. Essas alterações visam otimizar o ambiente de desenvolvimento e garantir uma configuração mais limpa e eficiente para o sistema AutoCura.

--- a/docker/environments/dev/docker-compose.yml
+++ b/docker/environments/dev/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api:
     build:
       context: ../../..
-      dockerfile: docker/Dockerfile.api.fixed
+      dockerfile: docker/environments/dev/Dockerfile.api
     ports:
       - "8000:8000"
     environment:
