Remover arquivos obsoletos, incluindo `exemplo_otimizacao_ia.md`, `mapa_containers_modulos.md`, `plano_correcao_modulos.md`, `proximos_passos_executados_relatorio.md`, e `relatorio_reorganizacao_final.md`, para simplificar a estrutura do projeto e garantir uma organização mais eficiente. Essas alterações visam otimizar o gerenciamento de documentação e facilitar a manutenção do sistema AutoCura.

--- a/docker/environments/dev/docker-compose.yml
+++ b/docker/environments/dev/docker-compose.yml
@@ -15,11 +15,11 @@ services:
       - HOST=0.0.0.0
       - PORT=8000
     depends_on:
-      - redis
+      - autocura-redis
     restart: unless-stopped
 
   # Cache Redis
-  redis:
+  autocura-redis:
     image: redis:latest
     ports:
       - "6379:6379"
