--- a/docker/environments/prod/nginx/nginx.conf
+++ b/docker/environments/prod/nginx/nginx.conf
@@ -4,8 +4,9 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 2048;
+    worker_connections 1024;
     use epoll;
+    multi_accept on;
 }
 
 http {
@@ -41,9 +42,8 @@ http {
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-    # Rate limiting
+    # Rate limiting zone
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/s;
 
     # Upstream servers
     upstream api_backend {
