--- a/docker/environments/prod/nginx/conf.d/default.conf
+++ b/docker/environments/prod/nginx/conf.d/default.conf
@@ -1,58 +1,49 @@
-# Configuração do servidor principal AutoCura
-
-# Redirect HTTP to HTTPS
-server {
-    listen 80;
-    server_name _;
-    
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    
-    location / {
-        return 301 https://$host$request_uri;
-    }
+# AutoCura Nginx Configuration - HTTP Only (Temporary)
+upstream api {
+    server api:8000;
 }
 
-# HTTPS Server
+upstream prometheus {
+    server prometheus:9090;
+}
+
+upstream grafana {
+    server grafana:3000;
+}
+
+# HTTP Server
 server {
-    listen 443 ssl http2;
-    server_name _;
-    
-    # SSL Configuration
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    
+    listen 80;
+    server_name localhost;
+
     # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    
-    # Root location - Dashboard
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Main dashboard
     location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-        
-        # Cache static assets
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
+        index index.html;
+        try_files $uri $uri/ =404;
     }
-    
-    # API Proxy
-    location /api {
+
+    # API proxy
+    location /api/ {
         limit_req zone=api_limit burst=20 nodelay;
         
-        proxy_pass http://api_backend;
-        proxy_http_version 1.1;
+        proxy_pass http://api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         
@@ -60,70 +51,37 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-        
-        # WebSocket support
-        proxy_buffering off;
     }
-    
-    # API Documentation
-    location /docs {
-        proxy_pass http://api_backend/docs;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    
-    location /redoc {
-        proxy_pass http://api_backend/redoc;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    
-    location /openapi.json {
-        proxy_pass http://api_backend/openapi.json;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    
-    # Prometheus
+
+    # Prometheus proxy
     location /prometheus/ {
-        auth_basic "Prometheus";
-        auth_basic_user_file /etc/nginx/.htpasswd;
-        
-        proxy_pass http://prometheus_backend/;
-        proxy_http_version 1.1;
+        proxy_pass http://prometheus/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    
-    # Grafana
+
+    # Grafana proxy
     location /grafana/ {
-        proxy_pass http://grafana_backend/;
-        proxy_http_version 1.1;
+        proxy_pass http://grafana/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Grafana WebSocket
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
-    
+
     # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
+    }
+
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 } 
