--- a/deployment/kubernetes/apps/api-deployment.yaml
+++ b/deployment/kubernetes/apps/api-deployment.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
       - name: api
         image: autocura/api:latest  # Ajustar com registro real
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
           name: http
