--- a/docker/environments/prod/Dockerfile.api-fixed
+++ b/docker/environments/prod/Dockerfile.api-fixed
@@ -17,7 +17,8 @@ COPY --chown=app:app requirements.txt .
 
 # Instalar dependências Python
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir prometheus-client
 
 # Copiar código da aplicação
 COPY --chown=app:app . .
@@ -39,7 +40,7 @@ RUN echo "class EvolutionSandbox:\n    def __init__(self):\n        self.docker_
     echo "from enum import Enum\n\nclass SandboxType(Enum):\n    DOCKER = 'docker'\n    LOCAL = 'local'\n\nclass EvolutionSandbox:\n    def __init__(self):\n        self.docker_available = False\n        self.docker_client = None\n        print('[EvolutionSandbox] Rodando em modo Kubernetes - Docker desabilitado')\n    async def evolve(self, code, context):\n        return {'success': True, 'message': 'Evolution sandbox em modo produção'}\n    async def test_evolution(self, *args, **kwargs):\n        return {'success': True, 'tests_passed': True}\n    def get_status(self):\n        return {'docker_available': False, 'mode': 'kubernetes'}\nevolution_sandbox = EvolutionSandbox()" > src/cognicao/sandbox/evolution_sandbox.py && \
     echo "class EvolutionSandbox:\n    def __init__(self, docker_image=None):\n        self.docker_available = False\n        self.docker_client = None\n        self.docker_image = docker_image or 'python:3.11-alpine'\n        print('[EvolutionSandbox] Rodando em modo Kubernetes - Docker desabilitado')\n    def _check_docker_availability(self):\n        pass\n    async def execute_in_sandbox(self, *args, **kwargs):\n        return {'success': True, 'output': 'Sandbox executado em modo produção'}\n    def get_status(self):\n        return {'docker_available': False, 'mode': 'kubernetes'}\nevolution_sandbox = EvolutionSandbox()" > src/core/sandbox/evolution_sandbox.py && \
     echo "from .evolution_controller import EvolutionController\nfrom .evolution_sandbox import evolution_sandbox\nfrom .safe_code_generator import SafeCodeGenerator\n__all__ = ['EvolutionController', 'evolution_sandbox', 'SafeCodeGenerator']" > src/core/self_modify/__init__.py && \
-    echo "class MonitoringService:\n    def __init__(self):\n        pass\n    async def start(self):\n        return True\n    def get_metrics(self):\n        return {}\nmonitoring_service = MonitoringService()" > src/monitoring/service.py && \
+    echo "from prometheus_client import Counter, Histogram\nimport time\n\nclass MonitoringService:\n    def __init__(self):\n        self.request_count = Counter('http_requests_total', 'Total de requisições HTTP')\n        self.request_latency = Histogram('http_request_duration_seconds', 'Latência das requisições HTTP')\n        self.active_requests = Counter('http_requests_active', 'Requisições HTTP ativas')\n    async def start(self):\n        return True\n    def get_metrics(self):\n        return {}\n    def track_request(self, path, method, status_code, duration):\n        self.request_count.labels(path=path, method=method, status=status_code).inc()\n        self.request_latency.labels(path=path).observe(duration)\nmonitoring_service = MonitoringService()" > src/monitoring/service.py && \
     echo "from .service import monitoring_service" > src/monitoring/__init__.py && \
     echo "class SecurityManager:\n    def __init__(self):\n        pass\nsecurity_manager = SecurityManager()" > src/security/__init__.py && \
     echo "class DiagnosticService:\n    def __init__(self):\n        pass\n    async def analyze(self):\n        return {'status': 'healthy'}\ndiagnostic_service = DiagnosticService()" > src/services/diagnostico/service.py && \
@@ -50,7 +51,8 @@ RUN echo "class EvolutionSandbox:\n    def __init__(self):\n        self.docker_
     echo "from .service import guardian_service" > src/services/guardian/__init__.py && \
     echo "class IAService:\n    def __init__(self):\n        pass\n    async def process(self, data):\n        return {'result': 'processed'}\nia_service = IAService()" > src/services/ia/service.py && \
     echo "from .service import ia_service" > src/services/ia/__init__.py && \
-    echo "class DashboardBridge:\n    pass" > src/monitoring/integration/dashboard_bridge.py
+    echo "from prometheus_client import generate_latest\nfrom fastapi import APIRouter, Response\n\nrouter = APIRouter()\n\n@router.get('/metrics')\nasync def metrics():\n    return Response(generate_latest(), media_type='text/plain')" > src/monitoring/integration/dashboard_bridge.py && \
+    echo "from fastapi import FastAPI\nfrom prometheus_client import generate_latest\nfrom src.monitoring.integration.dashboard_bridge import router as metrics_router\n\napp = FastAPI()\napp.include_router(metrics_router, prefix='/api')\n\n@app.get('/api/health')\nasync def health():\n    return {'status': 'healthy'}\n\n@app.get('/')\nasync def root():\n    return {'message': 'AutoCura API'}" > src/main.py
 
 # Criar diretórios necessários
 RUN mkdir -p /dynamic-code/src/core && \
@@ -73,4 +75,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/api/health || exit 1
 
 # Comando de inicialização
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
